--- a/app.json
+++ b/app.json
@@ -22,7 +22,9 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+       
+      },
+      "package": "com.gee.amic"
     },
     "web": {
       "bundler": "metro",
