changed the databased info

--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
         "backgroundColor": "#ffffff"
        
       },
-      "package": "com.gee.amic"
+      "package": "com.gee.amicapp"
     },
     "web": {
       "bundler": "metro",
